NormalVersionWithLogger/src/main/java/com/example/rabam/error/CenterNotCreatedException.java
package com.example.rabam.error;

public class CenterNotCreatedException extends RuntimeException{
    public CenterNotCreatedException() {
        super("Center not created!");
    }
}
